// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-17746.md format 1`] = `
====================================options=====================================
parsers: ["markdown", "mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
- a

  - b

- c


  - d

=====================================output=====================================
- a

  - b

- c

  - d

================================================================================
`;

exports[`issue-17746-code-sibling-nested-list.md format 1`] = `
====================================options=====================================
parsers: ["markdown", "mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
- a
  \`\`\`
  b
  \`\`\`
- c

  - d

=====================================output=====================================
- a
  \`\`\`
  b
  \`\`\`
- c

  - d

================================================================================
`;

exports[`issue-17746-fenced-code-then-nested-list.md format 1`] = `
====================================options=====================================
parsers: ["markdown", "mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
- \`\`\`
  a
  \`\`\`

  - b
- c

=====================================output=====================================
- \`\`\`
  a
  \`\`\`

  - b

- c

================================================================================
`;
